--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "tsc && cp -r src/public dist/",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
-    "dev:watch": "nodemon --exec ts-node src/server.ts",
-    "postinstall": "npm run build"
+    "dev:watch": "nodemon --exec ts-node src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
